--- a/index.htm
+++ b/index.htm
@@ -2,7 +2,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Royla Nest</title>
+	<title>WHITE FORT</title>
 	<meta name="description" content="Royal Nest Website">
 	<meta name="auther" content="royalnest.com">
 	<meta name="viewport" content="width=device-width initial-scale=1">
@@ -44,7 +44,7 @@
 					<img src="assets/images/home-image-one.png"/>
 				</div>
 				<p>Majority of tourists prefer the proximity of a town. But they like calm atmosphere for their sound sleep!  WHITE FORT the budget hotel is such a one.  You can enjoy all the conveniences and facilities of the town within metres.  Almost all  rooms in WHITE FORT open to a glimpse of the Periyar Tiger Reserve hills, though not near.  The hotel situates at Thekkady Junction in Kumily town. The periyar tiger reserve is just 4kms from White Fort.</p>
-				<p>The hotel is promoted by Muckumkal Group which started their association with  hospitality in 1986(please visit <a href="http://www.thekkadyroyalnest.in">www.thekkadyroyalnest.in</a> for more informations). Those days were the childhood of Thekkady as an international tourist centre. Since then the Muckumkal Group is experiencing every pulse of  tourism sector in Thekkady.</p>
+				<p>The hotel is promoted by Muckumkal Group which started their association with  hospitality in 1986(please visit <a href="http://thekkadyroyalnest.in">thekkadyroyalnest.in</a> for more informations). Those days were the childhood of Thekkady as an international tourist centre. Since then the Muckumkal Group is experiencing every pulse of  tourism sector in Thekkady.</p>
 				<p>In short White Fort is a follow up of a legacy established in 1986</p>
 				<div class="image">
 					<img src="assets/images/home-image-two.png"/>
