--- a/attraction.htm
+++ b/attraction.htm
@@ -46,43 +46,43 @@
 				<div class="row">
 					<div class="col-md-6">
 						<div class="image">
-							<img src="assets/images/thekkady-boating.png"/>
+							<img src="assets/images/thekkady-boating.jpg"/>
 							<p>The major attraction of Thekkady is Thekkady itself. Boating through the lake and enjoying the periyar Tiger Reserve are unique experience to all..!</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="image">
-							<img src="assets/images/elephant-ride.png"/>
+							<img src="assets/images/elephant-ride.jpg"/>
 							<p>Elephant ride is conducted by various private agencies in their own plantations. Tourists can make elephant ride, elephant shower and bathing along with feeding photo session.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="image">
-							<img src="assets/images/factory-visit.png"/>
+							<img src="assets/images/factory-visit.jpg"/>
 							<p>Tea factory visit is a guided tour to the nearby tea plantations and factory. The visitors get a close and deep idea of  the tea culture.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="image">
-							<img src="assets/images/grape-plantation.png"/>
+							<img src="assets/images/grape-plantation.jpg"/>
 							<p>The very attractive grape plantations visit in the state of Tamilnadu is just below 15kms from WhiteFort. Visitors can enjoy  different stages of grape farming.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="image">
-							<img src="assets/images/jeep-safari.png"/>
+							<img src="assets/images/jeep-safari.jpg"/>
 							<p>Jeep Safari is a very interesting trekking experience along the hillside of the Western Ghats.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="image">
-							<img src="assets/images/kalaripayattu.png"/>
+							<img src="assets/images/kalaripayattu.jpg"/>
 							<p>Kalaripayattu is  performed in ‘Kuzhikalari’ where the viewers will get  clear vision from a safer distance to watch this dangerous martial art of Kerala.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="image">
-							<img src="assets/images/kathakali.png"/>
+							<img src="assets/images/kathakali.jpg"/>
 							<p>Kathakali is originated in the 17th century in Kerala. It is a harmonious combination of five forms of fine art namely literature, music, painting, acting and dance.</p>
 						</div>
 					</div>
