--- a/contact.htm
+++ b/contact.htm
@@ -43,12 +43,12 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="image">
-							<img src="assets/images/room.png"/>
+							<img src="assets/images/room.jpg"/>
 						</div>	
 					</div>
 					<div class="col-sm-6">
 						<div class="image m-top">
-							<img src="assets/images/toilet.png"/>
+							<img src="assets/images/toilet.jpg"/>
 						</div>
 					</div>
 				</div>
