--- a/contact.htm
+++ b/contact.htm
@@ -99,7 +99,7 @@
                                 </ul>
                                 <ul>
                                     <li>
-                                        <ps>P.B.No.6, Kumily-685 509, Thekkady, Kerala</p>
+                                        <p>P.B.No.6, Kumily-685 509, Thekkady, Kerala</p>
                                     </li>
                                     <li>
                                         <p>Ph: 085 472 44 772</p>
